# muon-collider

Analyzer/: AnalysisScript.cpp  AnalysisScript.cpp.backup  AnalysisScript.cpp.fullRun  AnalysisScript.cpp.zAxis  compileAnalyzer.sh  results.root
MuonCollider/: CMakeLists.txt  compile.sh  envSetup.sh  main.cc
MuonCollider/GEANT4_MuonCollider/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.backup  compile.sh.backup  main.cc.temp  run.mac  vis.mac  vis.mac.v2
MuonCollider/GEANT4_MuonCollider/include/: ActionInitialization.hh  EventAction.hh  Hit.hh.Backup  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh.00  SensitiveDetector.hh.Backup  SteppingAction.hh
MuonCollider/GEANT4_MuonCollider/include/DetectorGeometry/: DetectorConstruction.hh  DetectorConstruction.hh.cellSwitchModeMotherVolume_240618  DimensionsManager.hh  MaterialManager.hh
MuonCollider/GEANT4_MuonCollider/src/: ActionInitialization.cc  EventAction.cc  Hit.cc.Backup  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc.ShootBoundaries  PrimaryGeneratorAction.cc.WholeTunsten  RunAction.cc  SensitiveDetector.cc.0  SensitiveDetector.cc.Backup  SteppingAction.cc
MuonCollider/GEANT4_MuonCollider/src/DetectorGeometry/: DetectorConstruction.cc  DetectorConstruction.cc.BackUpForDRC  DetectorConstruction.cc.cellSwitchModeMotherVolume_240618  DetectorConstruction.cc.cellWMother  DetectorConstruction.cc.cellWMotherV2  DetectorConstruction.cc.cellWOMother  DetectorConstruction.cc.cellWOMotherV2  DimensionsManager.cc.BackUpForDRC  MaterialManager.cc
MuonCollider/ROOT_Functions/: CMakeLists.txt
MuonCollider/ROOT_Functions/include/: Analyzer.hh  skeletonClass.hh  temp.hh
MuonCollider/ROOT_Functions/src/: Analyzer.cpp  skeletonClass.cpp  temp.cpp
condor/: MuonCollider.submit  condor_job.sh
